kubernetes/base/demo-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: demo
  labels:
    app: demo-nginx

spec:
  replicas: 3

  selector:
    matchLabels:
      app: demo-nginx

  template:
    metadata:
      labels:
        app: demo-nginx

    spec:
      containers:
      - name: demo-nginx

        image: localhost:5001/demo-nginx:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 250m
            memory: 256Mi

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
