kubernetes/base/demo-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-nginx
  namespace: demo

spec:
  ingressClassName: nginx

  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: demo-nginx
                port:
                  number: 80
